* some code cleanup  * documentation updates

--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -6,8 +6,8 @@ observables = {
    };
 };
      
-//the parameters of the model are the number of signal and
-// background events after the selection
+//the parameters of the model are the poisson means of the expected number of signal
+// and background events
 parameters = ("s", "b");
 
 gaussoverflat = {
@@ -51,9 +51,9 @@ gaussoverflat = {
              type = "flat_distribution";
              s = {
                 range = (0.0, "inf");
-		fix-sample-value = 200.0;
+                fix-sample-value = 200.0;
             };
-	});
+        });
     };
 };
 
@@ -70,14 +70,16 @@ delta-s-zero = {
    s = 0.0;
 };
 
-//generate likelihood ratio test statistics by minimizing all
-// but the specified parameters (which are fixed) and saving the ratio as result.
+//generate likelihood ratio test statistics by minimizing the nagtive log-likelihood twice:
+// one time for the constraints defined via the background-only-distribution and once
+// for the signal-plus-background-distirbution 
 hypotest = {
     type = "deltanll_hypotest";
     minimizer = "@myminuit";
     background-only-distribution = {
          type = "product_distribution";
-         distributions=("@b-dist", "@delta-s-zero");};
+         distributions=("@b-dist", "@delta-s-zero");
+    };
     signal-plus-background-distribution = "@gaussoverflat.parameter-distribution";
 };
 
@@ -87,20 +89,23 @@ myminuit = {
 
 main = {
 
+   // data source to use which is passed to the producers; in this case,
+   // pseudo data is drawn from the model
    data_source = {
        type = "model_source";
        model = "@gaussoverflat";
    };
    
-   //model to use for pseudo data generation and to pass to the producers:
+   //model to pass to the producers:
    model = "@gaussoverflat";
 
-   //name of producers to run:
+   //the producers to run:
    producers = ("@hypotest");
 
    //number of PE to run
    n-events = 500;
    
+   // where to write the results and logging info, etc.:
    output_database = {
         type = "sqlite_database";
         filename = "gaussoverflat.db";
