* add blackhole database for testing purposes

--- a/examples/gaussoverflat-blackhole.cfg
+++ b/examples/gaussoverflat-blackhole.cfg
@@ -107,8 +107,7 @@ main = {
    
    // where to write the results and logging info, etc.:
    output_database = {
-        type = "sqlite_database";
-        filename = "gaussoverflat.db";
+        type = "blackhole_database";
     };
 };
 
