* extend database interface to allow auto incrementing values * use auto incrementing values from runid to determine runid * rewrite database plugins for the auto increment value * add postgresql interface

--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -76,6 +76,7 @@ delta-s-zero = {
 hypotest = {
     type = "deltanll_hypotest";
     minimizer = "@myminuit";
+    name = "hypotest";
     background-only-distribution = {
          type = "product_distribution";
          distributions=("@b-dist", "@delta-s-zero");
@@ -103,7 +104,7 @@ main = {
    producers = ("@hypotest");
 
    //number of PE to run
-   n-events = 1000;
+   n-events = 10000;
    
    // where to write the results and logging info, etc.:
    output_database = {
