--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,7 +1,9 @@
 file(GLOB plugin_sources *.cpp)
 add_library(plugin MODULE ${plugin_sources})
 
-target_link_libraries(plugin sqlite3)
+target_link_libraries(plugin sqlite3 pq)
+#TODO: ...
+include_directories("/usr/include/postgresql/")
 
 add_custom_command(TARGET plugin POST_BUILD COMMAND mv ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libplugin.so ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/core-plugins.so)
 
