--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ else()
   if(release)
      set(CMAKE_BUILD_TYPE RelWithDebInfo)
      message(STATUS "building release version")
+     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -pthread")
   else()
      message(STATUS "building release version +debug")
      set(CMAKE_BUILD_TYPE RelWithDebInfo)
