* simplified class hierarchy by removing class PluginType  * adding n_threads options; chaning plugin loading option  * forcing the usage of name = "..."; for any plugin writing to the "products" table  * added documentation for compile time (cmake) options  * some general cleanup

--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -4,6 +4,7 @@
 // but the specified parameters (which are fixed) and saving the ratio as result.
 hypotest = {
     type = "deltanll_hypotest";
+    name = "hypotest";
     minimizer = "@myminuit";
     signal-plus-background-distribution = "@countingExp.parameter-distribution";
     background-only-distribution = {
@@ -18,8 +19,9 @@ myminuit = {
 
 main = {
    data_source = {
-   	  type = "model_source";
-   	  model = "@countingExp";
+      name = "data_source";
+      type = "model_source";
+      model = "@countingExp";
    };
    
    //model to use for pseudo data generation and to pass to the producers:
