--- a/examples/gaussoverflat-include.cfg
+++ b/examples/gaussoverflat-include.cfg
@@ -66,6 +66,6 @@ b-dist = {
             };
 
 
-plugins = {
-  files = ("lib/core-plugins.so", "lib/root.so");
+options = {
+  plugin_files = ("lib/core-plugins.so", "lib/root.so");
 };
