--- a/examples/gaussoverflat-mcmc_histo.cfg
+++ b/examples/gaussoverflat-mcmc_histo.cfg
@@ -1,17 +1,8 @@
 @include "gaussoverflat-include.cfg"
 
-delta-s-zero = {
-   type = "delta_distribution";
-   s = 0.0;
-};
-
-delta-s-exp = {
-   type = "delta_distribution";
-   s = 200.0;
-};
-
 mcmc_histo = {
     type = "mcmc_posterior_histo";
+    name = "mcmc_histo";
     parameters = ("s");
     histo_s = {
        nbins = 512;
@@ -24,6 +15,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@mcmc_histo");
