--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -2,6 +2,7 @@
 
 mle = {
     type = "mle";
+    name = "mle";
 
     //use minuit as minimizer and source of errors:
     minimizer = "@myminuit";
@@ -18,6 +19,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@mle");
