--- a/examples/gaussoverflat-writer.cfg
+++ b/examples/gaussoverflat-writer.cfg
@@ -3,6 +3,7 @@
 
 mle = {
     type = "mle";
+    name = "mle";
 
     //use minuit as minimizer and source of errors:
     minimizer = "@myminuit";
@@ -13,6 +14,7 @@ mle = {
 
 writer = {
    type = "pseudodata_writer";
+   name = "writer";
    write-data = false;
    observables = ("mass");
 };
@@ -25,6 +27,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };    
    model = "@gaussoverflat";
    producers = ("@mle", "@writer");
