--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -75,8 +75,8 @@ delta-s-zero = {
 // for the signal-plus-background-distirbution 
 hypotest = {
     type = "deltanll_hypotest";
-    minimizer = "@myminuit";
     name = "hypotest";
+    minimizer = "@myminuit";
     background-only-distribution = {
          type = "product_distribution";
          distributions=("@b-dist", "@delta-s-zero");
@@ -95,6 +95,7 @@ main = {
    data_source = {
        type = "model_source";
        model = "@gaussoverflat";
+       name = "source";
    };
    
    //model to pass to the producers:
@@ -104,7 +105,7 @@ main = {
    producers = ("@hypotest");
 
    //number of PE to run
-   n-events = 10000;
+   n-events = 1000;
    
    // where to write the results and logging info, etc.:
    output_database = {
@@ -113,7 +114,7 @@ main = {
     };
 };
 
-plugins = {
-  files = ("lib/core-plugins.so", "lib/root.so");
+options = {
+  plugin_files = ("lib/root.so", "lib/core-plugins.so");
 };
 
