--- a/examples/plot-gaussoverflat.cfg
+++ b/examples/plot-gaussoverflat.cfg
@@ -10,14 +10,14 @@ log_likelihood_ratio = { // "lieklihood_ratio" will be the name in the output ro
 
 diced_s = {
    file = "gaussoverflat.db";
-   query = "select data_source__s from products";
+   query = "select source__s from products";
    nbins = 200;
    range = [0.0, 400.0];
 };
 
 diced_b = {
    file = "gaussoverflat.db";
-   query = "select data_source__b from products";
+   query = "select source__b from products";
    nbins = 200;
    range = [500.0, 1500.0];
 };
