--- a/test/test-stat/Makefile
+++ b/test/test-stat/Makefile
@@ -1,2 +1,2 @@
 clean:
-	@rm -f *.db counting-nobkg.cfg counting-fixedbkg.cfg
+	@rm -f *.db counting-nobkg.cfg counting-fixedbkg.cfg onoff.cfg gaussmean_model.cfg
