--- a/test/test-stat/counting-nobkg-deltanll_intervals.cfg
+++ b/test/test-stat/counting-nobkg-deltanll_intervals.cfg
@@ -2,23 +2,26 @@
 
 int = {
     type = "deltanll_intervals";
+    name = "int";
     parameter = "Theta";
     minimizer = {type = "root_minuit";};
     clevels = [0.6827, 0.9545];
 };
 
-plugins = {
-    files = ("../../lib/core-plugins.so", "../../lib/root.so");
+options = {
+    plugin_files = ("../../lib/core-plugins.so", "../../lib/root.so");
 };
 
 writer = {
     type = "pseudodata_writer";
+    name = "writer";
     observables = ("o");
     write-data = false;
 };
 
 main = {
     data_source = {
+        name = "data_source";
     	type = "model_source";
     	model = "@counting";
     };
