--- a/test/test-stat/counting-nobkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-nobkg-mcmc_quant.cfg
@@ -2,17 +2,19 @@
 
 mcmc = {
     type = "mcmc_quantiles";
+    name = "mcmc";
     parameter = "Theta";
     quantiles = [0.5, 0.16, 0.84, 0.95];
     iterations = 10000;
 };
 
-plugins = {
-    files = ("../../lib/core-plugins.so");
+options = {
+    plugin_files = ("../../lib/core-plugins.so");
 };
 
 writer = {
     type = "pseudodata_writer";
+    name = "writer";
     observables = ("o");
     write-data = false;
 };
@@ -23,6 +25,7 @@ main = {
         filename = "counting-nobkg-mcmc.db";
     };
     data_source = {
+        name = "data_source";
     	type = "model_source";
     	model = "@counting";
     };    
