--- a/test/test-stat/counting-nobkg-mle.cfg
+++ b/test/test-stat/counting-nobkg-mle.cfg
@@ -2,18 +2,20 @@
 
 mle = {
     type = "mle";
+    name = "mle";
     minimizer = {
         type = "root_minuit";
     };
     parameters = ("Theta");
 };
 
-plugins = {
-    files = ("../../lib/core-plugins.so", "../../lib/root.so");
+options = {
+    plugin_files = ("../../lib/core-plugins.so", "../../lib/root.so");
 };
 
 writer = {
     type = "pseudodata_writer";
+    name = "writer";
     observables = ("o");
     write-data = false;
 };
@@ -24,6 +26,7 @@ main = {
         filename = "counting-nobkg-mle.db";
     };
     data_source = {
+        name = "data_source";
     	type = "model_source";
     	model = "@counting";
     };
