--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,16 @@ set(CMAKE_VERBOSE_MAKEFILE, 1)
 option(coverage "build for coverage tests" OFF)
 option(release "build release version" ON)
 option(crlibm "use the log function from crlibm" ON)
+option(openmp "enable parallelization" ON)
+option(psql "use postgresql" OFF)
 
 if(coverage)
    message(STATUS "building for coverage test")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0")
 else()
   if(release)
-     set(CMAKE_BUILD_TYPE RelWithDebInfo)
+     set(CMAKE_BUILD_TYPE Release)
      message(STATUS "building release version")
-     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -pthread")
   else()
      message(STATUS "building release version +debug")
      set(CMAKE_BUILD_TYPE RelWithDebInfo)
@@ -23,6 +24,12 @@ endif()
 if(crlibm)
    message(STATUS "using log from crlibm")
    add_definitions(-DUSE_CRLIBM)
+endif()
+
+if(openmp)
+   message(STATUS "enabling parallelization")
+   add_definitions(-DUSE_OPENMP)
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -pthread")
 endif()
 
 
