--- a/examples/gaussoverflat-blackhole.cfg
+++ b/examples/gaussoverflat-blackhole.cfg
@@ -1,4 +1,3 @@
-//define one obervable named "mass" with range [500, 1500] and 200 bins.
 observables = {
    mass = {
        range = (500.0, 1500.0);
@@ -6,25 +5,15 @@ observables = {
    };
 };
      
-//the parameters of the model are the poisson means of the expected number of signal
-// and background events
 parameters = ("s", "b");
 
 gaussoverflat = {
-    //specification of the "mass" observable
     mass = {
-        //gaussian signal:
-        signal = { // "signal" is a name you can choose freely here
+        signal = {
             coefficient-function = {type = "mult"; parameters = ("s");};
             histogram = {
                 type = "fixed_gauss";
-                // In this case, we need to specify the observable here again,
-                // as this defines the range and binning of the histogram (and
-                // the configuration of the histogram works exactly the same
-                // outside of an observable specification).
                 observable = "mass";
-                // the sum of bin entries should be 1.0 (such that "s" is the
-                // number of events, not some multiple of that).
                 normalize_to = 1.0;
                 mean = 1000.0;
                 width = 250.0;
@@ -38,7 +27,6 @@ gaussoverflat = {
                 type = "fixed_poly";
                 observable = "mass";
                 normalize_to = 1.0;
-                //coefficients of the polynomial, starting with x^0
                 coefficients = [1.0];
             };
         };
@@ -70,11 +58,9 @@ delta-s-zero = {
    s = 0.0;
 };
 
-//generate likelihood ratio test statistics by minimizing the nagtive log-likelihood twice:
-// one time for the constraints defined via the background-only-distribution and once
-// for the signal-plus-background-distirbution 
 hypotest = {
     type = "deltanll_hypotest";
+    name = "hypotest";
     minimizer = "@myminuit";
     background-only-distribution = {
          type = "product_distribution";
@@ -88,30 +74,20 @@ myminuit = {
 };
 
 main = {
-
-   // data source to use which is passed to the producers; in this case,
-   // pseudo data is drawn from the model
    data_source = {
+       name = "data_source";
        type = "model_source";
        model = "@gaussoverflat";
    };
-   
-   //model to pass to the producers:
    model = "@gaussoverflat";
-
-   //the producers to run:
    producers = ("@hypotest");
-
-   //number of PE to run
    n-events = 1000;
-   
-   // where to write the results and logging info, etc.:
    output_database = {
         type = "blackhole_database";
     };
 };
 
-plugins = {
-  files = ("lib/core-plugins.so", "lib/root.so");
+options = {
+  plugin_files = ("lib/core-plugins.so", "lib/root.so");
 };
 
