--- a/examples/gaussoverflat-intervals.cfg
+++ b/examples/gaussoverflat-intervals.cfg
@@ -2,6 +2,7 @@
 
 mle = {
     type = "mle";
+    name = "mle";
     minimizer = "@myminuit";
     parameters = ("s");
 };
@@ -12,6 +13,7 @@ myminuit = {
 
 intervals = {
    type = "deltanll_intervals";
+   name = "intervals";
    parameter = "s";
    clevels = [0.68];
    minimizer = "@myminuit";
@@ -21,6 +23,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@mle", "@intervals");
