--- a/examples/gaussoverflat-mcmc.cfg
+++ b/examples/gaussoverflat-mcmc.cfg
@@ -12,6 +12,7 @@ delta-s-exp = {
 
 mcmc_ratio = {
     type = "mcmc_posterior_ratio";
+    name = "mcmc_ratio";
     background-only-distribution = { type = "product_distribution"; distributions = ("@b-dist", "@delta-s-zero");};
     signal-plus-background-distribution = { type = "product_distribution"; distributions = ("@b-dist", "@delta-s-exp"); };
     iterations = 5000;
@@ -19,6 +20,7 @@ mcmc_ratio = {
 
 mcmc_ratio2 = {
     type = "mcmc_posterior_ratio";
+    name = "mcmc_ratio2";
     background-only-distribution = "@mcmc_ratio.background-only-distribution";
     signal-plus-background-distribution = "@mcmc_ratio.signal-plus-background-distribution";
     iterations = 5000;
@@ -26,6 +28,7 @@ mcmc_ratio2 = {
 
 minimized_ratio = {
     type = "deltanll_hypotest";
+    name = "minimized_ratio";
     minimizer = "@myminuit";
     background-only-distribution = "@mcmc_ratio.background-only-distribution";
     signal-plus-background-distribution = "@mcmc_ratio.signal-plus-background-distribution";
@@ -39,6 +42,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@mcmc_ratio", "@mcmc_ratio2", "@minimized_ratio");
