--- a/examples/gaussoverflat-mcmc_quantiles.cfg
+++ b/examples/gaussoverflat-mcmc_quantiles.cfg
@@ -2,6 +2,7 @@
 
 bayesian_quantiles = {
     type = "mcmc_quantiles";
+    name = "bayesian_quantiles";
     parameter = "s";
 
     //produce data to derive 1 sigma central interval, central value and 95% upper limit:
@@ -13,6 +14,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@bayesian_quantiles");
