--- a/examples/gaussoverflat-nll_scan.cfg
+++ b/examples/gaussoverflat-nll_scan.cfg
@@ -2,6 +2,7 @@
 
 scan = {
    type = "nll_scan";
+   name = "scan";
    parameter = "s";
    minimizer = { type = "root_minuit"; };
    parameter-values = {start = 0.0; stop = 1.0; n-steps = 101;};
@@ -11,6 +12,7 @@ main = {
    data_source = {
       type = "model_source";
       model = "@main.model";
+      name = "source";
    };
    model = "@gaussoverflat";
    producers = ("@scan");
