--- a/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
@@ -2,23 +2,26 @@
 
 mcmc = {
     type = "mcmc_quantiles";
+    name = "mcmc";
     parameter = "Theta";
     quantiles = [0.5, 0.16, 0.84, 0.95];
     iterations = 10000;
 };
 
-plugins = {
-    files = ("../../lib/core-plugins.so");
+options = {
+    plugin_files = ("../../lib/core-plugins.so");
 };
 
 writer = {
     type = "pseudodata_writer";
+    name = "writer";
     observables = ("o");
     write-data = false;
 };
 
 main = {
     data_source = {
+        name = "data_source";
     	type = "model_source";
     	model = "@counting";
     };
