--- a/test/test-stat/onoff_pl.cfg
+++ b/test/test-stat/onoff_pl.cfg
@@ -2,6 +2,7 @@
 
 hypotest = {
     type = "deltanll_hypotest";
+    name = "hypotest";
     minimizer = {
         type = "root_minuit";
     };
@@ -16,8 +17,8 @@ hypotest = {
     };
 };
 
-plugins = {
-    files = ("../../lib/core-plugins.so", "../../lib/root.so");
+options = {
+    plugin_files = ("../../lib/core-plugins.so", "../../lib/root.so");
 };
 
 main = {
