--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -112,6 +112,8 @@ main = {
         type = "sqlite_database";
         filename = "gaussoverflat.db";
     };
+    
+    seed = 101;
 };
 
 options = {
