--- a/libconfig/Makefile
+++ b/libconfig/Makefile
@@ -1,7 +1,8 @@
-include ../Makefile.rules
-
 sources := $(wildcard *.c)
-objects := $(patsubst %.c,%.o,$(sources)) libconfigcpp.o
+objects := $(patsubst %.c,.bin/%.o,$(sources)) .bin/libconfigcpp.o
+deps := $(patsubst %.o,%.d,$(objects))
+
+include ../Makefile.rules
 
 all: ../lib/libconfig.so
 
