* support Makefile-based builds outside of CMSSW, but fetching dependencies from CMSSW  * add build option for use of crlibm  * remove obsolete setenv.sh

--- a/Makefile.options
+++ b/Makefile.options
@@ -2,5 +2,9 @@
 #
 # boolean-like switches should be either either "yes" or "no"
 
+# whether or not to build the tests in the test/ directory
 OPTIONS_BUILD_TESTS := yes
+
+# whether or not to use the log function from crlibm (which is faster than the standard log)
+OPTIONS_USE_CRLIBM := yes
 
