--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,13 @@
+include ../Makefile.options
 
 libsources := $(wildcard *.cpp)
 libobjects := $(patsubst %.cpp,.bin/%.o,$(libsources))
 deps := $(patsubst %.cpp,.bin/%.d,$(libsources))
+
+ifeq ($(OPTIONS_USE_CRLIBM),yes)
+   libobjects += .bin/log.o
+   deps += .bin/log.d
+endif
 
 include ../Makefile.rules
 
@@ -9,6 +15,9 @@ all: ../lib/libtheta.so
 
 ../lib/libtheta.so: $(libobjects)
 	@$(LINK_SO) -o $@ $+
+
+.bin/%.o: ../crlibm/%.c
+	@$(COMPILE) -x c -o $@ $<
 
 clean-subdir:
 	@rm -f ../lib/libtheta.so
