--- a/Makefile.rules
+++ b/Makefile.rules
@@ -12,17 +12,17 @@ ifeq (0, $(words $(findstring $(MAKECMDGOALS), clean clean-subdir)))
   -include $(deps)
 endif
 
-#if available, use dependencies from CMSSW:
+# if available, use dependencies from CMSSW:
 ifneq ($(shell which scram || echo -n A),A)
    scram = $(shell cd $$CMSSW_BASE; scram tool tag $(1) $(2))
    BOOST_INCLUDE := -I$(call scram,boost,INCLUDE)
-   BOOST_LIBLIST := $(call scram,boost,LIB) $(call boost_filesystem,LIB) $(call scram,boost_program_options,LIB) $(call scram boost_regex,LIB)
+   BOOST_LIBLIST := $(call scram,boost,LIB) $(call scram,boost_filesystem,LIB) $(call scram,boost_program_options,LIB) $(call scram,boost_regex,LIB)
    BOOST_LIBS := -L$(call scram,boost,LIBDIR) $(patsubst %,-l%,$(BOOST_LIBLIST))
    SQLITE_LIBLIST := $(call scram,sqlite,LIB)
    SQLITE_LIBS := $(patsubst %,-l%,$(SQLITE_LIBLIST)) -L$(call scram,sqlite,LIBDIR)
    SQLITE_INCLUDE := -I$(call scram,sqlite,INCLUDE)
+# otherwise: assume dependencies are installed system-wide and no paths have to be set explicitely:
 else
-   #otherwise: assume dependencies are installed system-wide and no paths have to be set explicitely:
    BOOST_INCLUDE:=
    SQLITE_INCLUDE:=
    SQLITE_LIBS := -lsqlite3
