add option to mle producer to write out covariance matrix at minimum

--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -9,6 +9,8 @@ mle = {
 
     //write out result for both parameters:
     parameters = ("s", "b");
+    
+    write_covariance = true;
 };
 
 myminuit = {
