--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,14 @@
+include ../Makefile.options
+
 deps := .bin/merge.d .bin/theta.d
 
 include ../Makefile.rules
 
 all: merge theta
+
+ifeq ($(OPTIONS_BUILD_STATIC),yes)
+   all: theta-static
+endif
 
 
 merge: .bin/merge.o
@@ -10,6 +16,9 @@ merge: .bin/merge.o
 
 theta: .bin/theta.o
 	@$(LINK_EXE) -o $@ $<
+
+theta-static: .bin/theta.o
+	$(LINK_EXE_STATIC) -o $@ $<
 
 clean-subdir:
 	@rm -f merge theta
