* deleted obsolete db2root (users can just use rootfile_database directly)  * root_histogram can now read 2D and 3D histograms  * added tests for root_histogram plugin, especially for multi-dimensional case

--- a/root/Makefile
+++ b/root/Makefile
@@ -1,3 +1,5 @@
+include ../Makefile.options
+
 ifeq ($(shell which root-config || echo -n A),A)
 all:
 	@echo -e \\nNOTE: no root-config found. Not building root-dependent stuff.\\n
@@ -18,12 +20,16 @@ EXTRA_LINK_EXE := $(EXTRA_LINK_SO)
 
 all: ../lib/root.so histos
 
+ifeq ($(OPTIONS_BUILD_TESTS),yes)
+all: create_testhistos
+endif
+
 histos: .bin/histos.o
 	@$(LINK_EXE) -o $@ $<
-	
-db2root: .bin/db2root.o
-	@$(LINK_EXE) -o $@ $<
 
+create_testhistos: .bin/create_testhistos.o
+	@$(LINK_EXE) -o $@ $<
+	
 ../lib/root.so: $(objects)
 	@$(LINK_SO) -o $@ $+
 
@@ -31,4 +37,4 @@ endif
 
 #define clean target in any case:
 clean-subdir:
-	@rm -f histos db2root ../lib/root.so
+	@rm -f histos ../lib/root.so
