Set random seed to a fixed value in the tests to avoid random failures

--- a/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
@@ -30,6 +30,7 @@ main = {
     producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
+    seed = 123;
     output_database = {
         type = "sqlite_database";
         filename = "counting-fixedbkg-mcmc.db";
