--- a/test/test-stat/counting-fixedbkg-mle.cfg
+++ b/test/test-stat/counting-fixedbkg-mle.cfg
@@ -31,6 +31,7 @@ main = {
     producers = ("@mle", "@writer");
     log-report = false;
     n-events = 500;
+    seed = 123;
     output_database = {
         type = "sqlite_database";
         filename = "counting-fixedbkg-mle.db";
