* Makefile cleanup: drop static build option  * add gridpack directory and scripts to build an archive containing all dependencies to run theta on the grid

--- a/root/Makefile
+++ b/root/Makefile
@@ -37,4 +37,4 @@ endif
 
 #define clean target in any case:
 clean-subdir:
-	@rm -f histos ../lib/root.so
+	@rm -f histos create_testhistos ../lib/root.so
