--- a/Makefile.rules
+++ b/Makefile.rules
@@ -31,7 +31,7 @@ else
    ifeq ($(shell test -e /usr/lib/libboost_system-mt.so && echo -n A),A)
       BS:=-mt
    endif
-   BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS)
+   BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS)
 endif
 
 
@@ -49,9 +49,7 @@ EXTRA_LINK_SO =
 
 COMPILE = echo creating $@; $(CXX) $(DEFINES) -g -c -Wall -fPIC -O3 $(INCLUDES) $(EXTRA_COMPILE)
 LINK_EXE = echo linking $@; $(CXX) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib -ldl -ltheta -lconfig $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
-LINK_EXE_STATIC = echo linking $@; $(CXX) -static -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib -ldl -ltheta -lconfig $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
 LINK_SO = echo linking $@; $(CXX) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(EXTRA_LINK_SO)
-CREATE_A = echo creating $@; ar -rs
 
 .bin/%.o: %.cpp
 	@$(COMPILE) -o $@ $<
@@ -71,7 +69,6 @@ CREATE_A = echo creating $@; ar -rs
 
 .bin/%.d: %.c
 	@$(COMPILE) -x c -MM -MT '$(patsubst %.c,.bin/%.o,$<)' $< > $@
-
 
 
 #make clean rule depend on subdir-specific:
