--- a/examples/CountingExp.cfg
+++ b/examples/CountingExp.cfg
@@ -22,6 +22,8 @@ main = {
       name = "data_source";
       type = "model_source";
       model = "@countingExp";
+      //set the random seed:
+      rnd_gen = {seed = 10815; };
    };
    
    //model to use for pseudo data generation and to pass to the producers:
@@ -33,9 +35,6 @@ main = {
    //number of PE to run
    n-events = 5000;
 
-   //set the random seed
-   seed     = 10815;
-   
     output_database = {
         type = "sqlite_database";
         filename = "SigAndBkg.db";
