--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -96,6 +96,9 @@ main = {
        type = "model_source";
        model = "@gaussoverflat";
        name = "source";
+       
+       //explicitely set the random seed:
+       rnd_gen = {seed = 202;};
    };
    
    //model to pass to the producers:
@@ -113,7 +116,6 @@ main = {
         filename = "gaussoverflat.db";
     };
     
-    seed = 101;
 };
 
 options = {
