--- a/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
@@ -24,13 +24,13 @@ main = {
         name = "data_source";
     	type = "model_source";
     	model = "@counting";
+    	rnd_gen = { seed = 123; };
     };
 
     model = "@counting";
     producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
-    seed = 123;
     output_database = {
         type = "sqlite_database";
         filename = "counting-fixedbkg-mcmc.db";
