--- a/test/test-stat/counting-nobkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-nobkg-mcmc_quant.cfg
@@ -28,11 +28,11 @@ main = {
         name = "data_source";
     	type = "model_source";
     	model = "@counting";
+    	rnd_gen = {seed = 123; };
     };    
     
     model = "@counting";
     producers = ("@mcmc", "@writer");
     log-report = false;
     n-events = 50;
-    seed = 123;
 };
