--- a/test/test-stat/counting-fixedbkg-mle.cfg
+++ b/test/test-stat/counting-fixedbkg-mle.cfg
@@ -25,13 +25,13 @@ main = {
         name = "data_source";
     	type = "model_source";
     	model = "@counting";
+    	rnd_gen = {seed = 123; };
     };
     
     model = "@counting";
     producers = ("@mle", "@writer");
     log-report = false;
     n-events = 500;
-    seed = 123;
     output_database = {
         type = "sqlite_database";
         filename = "counting-fixedbkg-mle.db";
