--- a/test/test-stat/counting-nobkg-deltanll_intervals.cfg
+++ b/test/test-stat/counting-nobkg-deltanll_intervals.cfg
@@ -24,6 +24,7 @@ main = {
         name = "data_source";
     	type = "model_source";
     	model = "@counting";
+    	rnd_gen = { seed = 123; };
     };
 
     model = "@counting";
