--- a/test/test-stat/counting-nobkg-mle.cfg
+++ b/test/test-stat/counting-nobkg-mle.cfg
@@ -29,11 +29,11 @@ main = {
         name = "data_source";
     	type = "model_source";
     	model = "@counting";
+    	rnd_gen = {seed = 123; };
     };
 
     model = "@counting";
     producers = ("@mle", "@writer");
     log-report = false;
     n-events = 500;
-    seed = 123;
 };
