* various performance enhancements; including (optional) SSE2 optimizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ option(coverage "build for coverage tests" OFF)
 option(optiontest "build tests" OFF)
 option(release "build release version" ON)
 option(crlibm "use the log function from crlibm" ON)
+option(sse "use sse optimizations" OFF)
 option(psql "use postgresql" OFF)
 
 if(coverage)
@@ -24,6 +25,11 @@ endif()
 if(crlibm)
    message(STATUS "using log from crlibm")
    add_definitions(-DUSE_CRLIBM)
+endif()
+
+if(sse)
+   message(STATUS "using SSE optimizations")
+   add_definitions(-DUSE_SSE)
 endif()
 
 find_package(Boost COMPONENTS regex program_options filesystem system)
