* various performance improvements; including using log function from fpu via assembly  * dropped the caching of sum_of_bincontents from Histogram for simplification and performance improvements  * SSE2 build is no default, if available ond the build platform  * added $THETA_DIR variable which can be used in paths of the config file (in root_histogram, plugin_files)  * show progress only every 50ms maximum: on some problems, theta is so fast that displaying each bit of progress really slows things down too much ... ;-)

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -41,8 +41,8 @@ ifeq ($(OPTIONS_USE_CRLIBM),yes)
    DEFINES += -DUSE_CRLIBM
 endif
 
-ifeq ($(OPTIONS_USE_SSE),yes)
-   DEFINES += -DUSE_SSE
+ifeq ($(OPTIONS_GENERIC_ARCH),yes)
+   DEFINES += -DGENERIC_ARCH
 endif
 
 #lazy evaluation to allow subdirectories to add their own includes and libs ...
