--- a/bin/Makefile
+++ b/bin/Makefile
@@ -13,6 +13,9 @@ merge: .bin/merge.o
 theta-neyman: .bin/theta-neyman.o
 	@$(LINK_EXE) -o $@ $<
 
+combine-pvalues: .bin/combine-pvalues.o
+	@$(LINK_EXE) -o $@ $<
+
 theta: .bin/theta.o
 	@$(LINK_EXE) -o $@ $<
 
