--- a/examples/gaussoverflat.cfg
+++ b/examples/gaussoverflat.cfg
@@ -108,7 +108,7 @@ main = {
    producers = ("@hypotest");
 
    //number of PE to run
-   n-events = 1000;
+   n-events = 10000;
    
    // where to write the results and logging info, etc.:
    output_database = {
@@ -119,6 +119,6 @@ main = {
 };
 
 options = {
-  plugin_files = ("lib/root.so", "lib/core-plugins.so");
+  plugin_files = ("$THETA_DIR/lib/root.so", "$THETA_DIR/lib/core-plugins.so");
 };
 
