--- a/src/Makefile
+++ b/src/Makefile
@@ -9,9 +9,12 @@ ifeq ($(OPTIONS_USE_CRLIBM),yes)
    deps += .bin/log.d
 endif
 
+libobjects += .bin/log2_dot.o
+
 include ../Makefile.rules
 
 all: ../lib/libtheta.so
+
 
 
 ../lib/libtheta.so: $(libobjects)
@@ -19,6 +22,16 @@ all: ../lib/libtheta.so
 
 .bin/%.o: ../crlibm/%.c
 	@$(COMPILE) -x c -o $@ $<
+
+
+# switch between implementations of log2_dot
+ifeq ($(OPTIONS_GENERIC_ARCH),yes)
+.bin/log2_dot.o: log2_dot.cxx
+	@$(COMPILE) -o $@ $<
+else
+.bin/log2_dot.o: log2_dot.s
+	@$(COMPILE) -o $@ $<
+endif
 
 clean-subdir:
 	@rm -f ../lib/libtheta.so
