--- a/Makefile.options
+++ b/Makefile.options
@@ -1,6 +1,8 @@
 # You can edit this file to specify suitable options for your build.
 #
 # boolean-like switches should be either either "yes" or "no"
+#
+# after modifying this file, make sure to "make clean"!
 
 # whether or not to build the tests in the test/ directory
 OPTIONS_BUILD_TESTS := yes
@@ -8,6 +10,8 @@ OPTIONS_BUILD_TESTS := yes
 # whether or not to use the log function from crlibm (which is faster than the standard log)
 OPTIONS_USE_CRLIBM := yes
 
-# use sse2 to speed up vector operations
-OPTIONS_USE_SSE := no
-
+# Usually, theta assumes building for 64-bit x86 cpus (and an assembler compatible with the one gcc uses).
+# Setting this flag to 'yes' disables some optimizations and replaces functions with generic ones.
+# Note that some platform-specific optimizations are controlled by compiler-defined defines such as __SSE2__ and ignore
+# the value given here.
+OPTIONS_GENERIC_ARCH := no
