* rewrote Data with vector<Histogram> instead of map<ObsId, Histogram> for better performance  * dropped default construtor of the VarId (=ObsId/ParId) to prevent invalid ParIds/ObsIds; this    makes possible some optimizations and was in fact already assumed at some places  * omitted compatibility checks in histogram operations  * added compatibility checks in all HistogramFunctions and in the model

--- a/root/Makefile
+++ b/root/Makefile
@@ -21,7 +21,7 @@ EXTRA_LINK_EXE := $(EXTRA_LINK_SO)
 all: ../lib/root.so histos
 
 ifeq ($(OPTIONS_BUILD_TESTS),yes)
-all: create_testhistos create_testtree
+all: create_testhistos
 endif
 
 histos: .bin/histos.o
