--- a/Makefile.rules
+++ b/Makefile.rules
@@ -74,6 +74,13 @@ ifeq ($(OPTIONS_GENERIC_ARCH),yes)
    DEFINES += -DGENERIC_ARCH
 endif
 
+UNAME:=$(shell uname)
+ifeq ($(findstring BSD,$(UNAME)),BSD)
+  LDL:=-lc
+else
+  LDL:=-ldl
+endif
+
 
 INCLUDES := -I.. $(BOOST_INCLUDE) $(SQLITE_INCLUDE)
 EXTRA_COMPILE :=
@@ -81,8 +88,8 @@ EXTRA_LINK_EXE :=
 EXTRA_LINK_SO :=
 
 #lazy evaluation of compile and link command to allow subdirectory-Makefiles to override the value of EXTRA_* ...
-COMPILE = echo creating $@; $(CXX) $(DEFINES) -g -c -Wall -fPIC -O3 $(INCLUDES) $(EXTRA_COMPILE)
-LINK_EXE = echo linking $@; $(CXX) $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib -ldl -ltheta -lconfig $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
+COMPILE = echo creating $@; $(CXX) $(DEFINES) $(OPTIONS_CFLAGS) -g -c -Wall -fPIC -O3 $(INCLUDES) $(EXTRA_COMPILE)
+LINK_EXE = echo linking $@; $(CXX) $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib $(LDL) -ltheta -lconfig $(SQLITE_LIBS) $(BOOST_LIBS) $(EXTRA_LINK_EXE)
 LINK_SO = echo linking $@; $(CXX) $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(EXTRA_LINK_SO)
 
 .bin/%.o: %.cpp
